--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -27,7 +27,10 @@
 	  			Total: <input id="visitors_fb_ad" type="number" value="100000"><br>
 	  			Total Visitors: <input id="total_visitors_fb_ad" type="number" value="100000"><br>
 		  </div>
-	    <p>Total Cost: <input id="total_cost" type="number" value="20000"></p><br>
+
+	    <div id="total_cost_container">
+		    <p>Total Cost:</p><input id="total_cost" type="number" value="20000">
+		  </div>
 		</div>
 		<div id="middle_container" class="sub_container">
 		<p>Conversion</p>
