--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,7 +29,7 @@
 		  </div>
 
 	    <div id="total_cost_container">
-		    <p>Total Cost:</p><input id="total_cost" type="number" value="20000">
+		    <div><p>Total Cost:</p><input id="total_cost" type="number" value="20000"></div>
 		  </div>
 		</div>
 		<div id="middle_container" class="sub_container">
