--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 	<div id="left_container">
 		<div id="traffic_sources_container" class="sub_container">
-		<p>Traffic Sources</p>
+		<h3>Traffic Sources</h3>
 		  <div id="web_ad_traffic_source" class="traffic_source">
 	    <p>Web Ads</p>
 			    Cost Per Click: <input id="cpc_web_ad" type="number" value="5"><br>
@@ -32,16 +32,19 @@
 		    <div><p>Total Cost:</p><input id="total_cost" type="number" value="20000"></div>
 		  </div>
 		</div>
-		<div id="middle_container" class="sub_container">
-		<p>Conversion</p>
+		<div id="conversion_container" class="sub_container">
+		<h3>Conversion</h3>
 		  <div id="visitors_container" class="conversion_sub_container">
-		    Visitors: <input id="total_visitors" type="number" value="310000"><br>
+		    <p>Total Visitors:</p>
+		    <input id="total_visitors" type="number" value="310000">
 		  </div>
 		  <div id="participants_container" class="conversion_sub_container">
-		    Participants: <input id="total_participants" type="number" value="108500"><br>
+		    <p>Participants:</p>
+		    <input id="total_participants" type="number" value="108500">
 		  </div>
 		  <div id="conversion_rate_container" class="conversion_sub_container">
-		    Conversion Rate: <input id="conversion_rate" type="number" value="35"><br>
+		    <p>Conversion Rate:</p> 
+		    <input id="conversion_rate" type="number" value="35">
 		  </div>
 		</div>
 	  <div id="actions_container" class="sub_container">
